--- a/www/navigation.html
+++ b/www/navigation.html
@@ -1,29 +1,33 @@
 <div id="leftcol">
   <ul>
-    <li><a href="index.html">Home</a></li>
-    <ul>
-      <li><a href="mailto:feinerer@logic.at">Contact</a></li>
-    </ul>
-    <li>About</li>
+    <li><a href="index.html">Home</a>
+      <ul>
+	<li><a href="mailto:feinerer@logic.at">Contact</a></li>
+      </ul>
+    </li>
+    <li>About
       <ul>
 	<li><a href="authors.html">Authors</a></li>
 	<li><a href="users.html">Users</a></li>
       </ul>
     </li>
-    <li>News</li>
-    <ul>
-      <li><a href="https://r-forge.r-project.org/plugins/scmsvn/viewcvs.php/pkg/ChangeLog?root=tm&view=markup">Changelog</a></li>
-      <li><a href="https://r-forge.r-project.org/plugins/scmsvn/viewcvs.php/pkg/inst/NEWS?root=tm&view=markup">NEWS</a></li>
-    </ul>
-    <li>Getting tm</li>
-    <ul>
-      <li><a href="http://cran.r-project.org/package=tm">Stable release from CRAN</a></li>
-      <li><a href="https://r-forge.r-project.org/projects/tm/">Development version from R-Forge</a></li>
-    </ul>
-    <li>Resources</li>
-    <ul>
-      <li><a href="faq.html">Frequently Asked Questions</a></li>
-      <li><a href="publications.html">Publications</a></li>
-    </ul>
+    <li>News
+      <ul>
+	<li><a href="https://r-forge.r-project.org/plugins/scmsvn/viewcvs.php/pkg/ChangeLog?root=tm&amp;view=markup">Changelog</a></li>
+	<li><a href="https://r-forge.r-project.org/plugins/scmsvn/viewcvs.php/pkg/inst/NEWS?root=tm&amp;view=markup">NEWS</a></li>
+      </ul>
+    </li>
+    <li>Getting tm
+      <ul>
+	<li><a href="http://cran.r-project.org/package=tm">Stable release from CRAN</a></li>
+	<li><a href="https://r-forge.r-project.org/projects/tm/">Development version from R-Forge</a></li>
+      </ul>
+    </li>
+    <li>Resources
+      <ul>
+	<li><a href="faq.html">Frequently Asked Questions</a></li>
+	<li><a href="publications.html">Publications</a></li>
+      </ul>
+    </li>
   </ul>
 </div>
