Added screenshots page.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@889 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/authors.html
+++ b/www/authors.html
@@ -22,7 +22,7 @@
 	<li><a href="http://www.wu-wien.ac.at/itf/institute/staff/buchta">Christian
 	    Buchta</a> (<a href="http://www.wu-wien.ac.at">WU Wien</a>,
 	  Austria)</li>
-	<li><a href="http://www.wu-wien.ac.at/statmath/mitarbeiter/wissenschaftliche/khornik">Kurt
+	<li><a href="http://statmath.wu-wien.ac.at/~hornik">Kurt
 	    Hornik</a> (<a href="http://www.wu-wien.ac.at">WU Wien</a>,
 	  Austria)</li>
 	<li><a href="http://wi.wu-wien.ac.at/home/meyer/">David
