--- a/www/index.html
+++ b/www/index.html
@@ -9,9 +9,10 @@
     <div id="maincol">
       <h2>tm - Text Mining Package</h2>
       <p>
-	<a href="http://tm.r-forge.r-project.org/">tm</a> provides
-	a framework for text mining applications
-	within <a href="http://www.r-project.org">R</a>.
+	<a href="http://tm.r-forge.r-project.org/">tm</a> (shorthand
+	for <a href="http://www.jstatsoft.org/v25/i05"><em>T</em>ext <em>M</em>ining
+	Infrastructure in R</a>) provides a framework for text mining
+	applications within <a href="http://www.r-project.org">R</a>.
       </p>
       <p>
 	The tm package offers functionality for managing text
@@ -45,6 +46,10 @@
 	supports the export from document collections to
 	term-document matrices, and string kernels can be easily
 	constructed from text documents.
+      </p>
+      <p>
+	tm is freely available under the GNU General Public License
+	(GPL).
       </p>
     </div>
   </body>
