Referenced paper by Hoyland and Godbout.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@891 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/users.html
+++ b/www/users.html
@@ -56,6 +56,17 @@
 	  </blockquote>
 	</li>
 	<li>
+	  <a href="http://folk.uio.no/bjornkho/">Bjorn Hoyland</a>
+	  (<a href="http://www.uio.no/">University of Oslo</a>,
+	  Norway)
+	  and <a href="http://www.sfu.ca/~jga16/">Jean-Fran&ccedil;ois
+	  Godbout</a> (<a href="http://www.sfu.ca/">Simon Fraser
+	  University</a>, Canada) wrote a paper
+	  on <a href="http://www.jhubc.it/ecpr-riga/virtualpaperroom/034.pdf">predicting
+	  party group affiliation from European Parliament debates</a>
+	  using tm for their experiments.
+	</li>
+	<li>
 	  Daniel Perrucho (<a href="http://www.ubs.com">UBS</a>,
 	  Switzerland) uses tm to semi-automatically extract asset
 	  statements from business documents.
