Add link to the GNU GPL website.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@896 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/index.html
+++ b/www/index.html
@@ -48,8 +48,9 @@
 	constructed from text documents.
       </p>
       <p>
-	tm is freely available under the GNU General Public License
-	(GPL).
+	tm is freely available under
+	the <a href="http://www.gnu.org/licenses/gpl.html">GNU General
+	Public License (GPL)</a>.
       </p>
     </div>
   </body>
