Obfuscate e-mail address.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@936 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/navigation.html
+++ b/www/navigation.html
@@ -2,7 +2,7 @@
   <ul>
     <li><a href="index.html">Home</a>
       <ul>
-	<li><a href="mailto:feinerer@logic.at">Contact</a></li>
+	<li><a href="mailto:feinerer at logic dot at">Contact</a></li>
       </ul>
     </li>
     <li>About
