--- a/www/authors.html
+++ b/www/authors.html
@@ -12,23 +12,30 @@
 	The text mining framework tm was originally created by
 	<a href="http://www.dbai.tuwien.ac.at/staff/feinerer">Ingo
 	  Feinerer</a> as part of his dissertation at
-	  the <a href="http://statmath.wu-wien.ac.at/">Department of
+	  the <a href="http://statmath.wu.ac.at/">Department of
 	  Statistics and Mathematics</a> of
-	  the <a href="http://www.wu-wien.ac.at">Vienna University of
+	  the <a href="http://www.wu.ac.at">Vienna University of
 	  Economics and Business Administration</a>.
       </p>
       Contributors:
       <ul>
-	<li><a href="http://www.wu-wien.ac.at/itf/institute/staff/buchta">Christian
-	    Buchta</a> (<a href="http://www.wu-wien.ac.at">WU Wien</a>,
+	<li><a href="http://www.wu.ac.at/itf/institute/staff/buchta">Christian
+	    Buchta</a> (<a href="http://www.wu.ac.at">WU Wien</a>,
 	  Austria)</li>
-	<li><a href="http://statmath.wu-wien.ac.at/~hornik">Kurt
-	    Hornik</a> (<a href="http://www.wu-wien.ac.at">WU Wien</a>,
+	<li><a href="http://statmath.wu.ac.at/~gruen/">Bettina Gr&uuml;n</a>
+	  (<a href="http://www.wu.ac.at">WU Wien</a>,
 	  Austria)</li>
-	<li><a href="http://wi.wu-wien.ac.at/home/meyer/">David
-	    Meyer</a> (<a href="http://www.wu-wien.ac.at">WU Wien</a>,
+	<li><a href="http://statmath.wu.ac.at/~hornik">Kurt
+	    Hornik</a> (<a href="http://www.wu.ac.at">WU Wien</a>,
 	  Austria)</li>
-	<li>Fridolin Wild (<a href="http://www.wu-wien.ac.at">WU Wien</a>,
+	<li>Robert Koblischke (<a href="http://www.wu.ac.at">WU Wien</a>,
+	  Austria)</li>
+	<li><a href="http://wi.wu.ac.at/home/meyer/">David
+	    Meyer</a> (<a href="http://www.wu.ac.at">WU Wien</a>,
+	  Austria)</li>
+	<li><a href="http://statmath.wu-wien.ac.at/~theussl/">Stefan Theu&szlig;l</a> (<a href="http://www.wu.ac.at">WU Wien</a>,
+	  Austria)</li>
+	<li>Fridolin Wild (<a href="http://www.wu.ac.at">WU Wien</a>,
 	  Austria)</li>
       </ul>
     </div>
