Add comment by Joan-Josep Vallbé.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@953 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/users.html
+++ b/www/users.html
@@ -169,6 +169,22 @@
 	  </blockquote>
 	</li>
 	<li>
+	  <a href="http://idt.uab.es/people/curr/vallbe.htm">Joan-Josep
+	  Vallb&eacute;</a> (<a href="http://www.ub.edu/">Universitat
+	  de Barcelona</a>, Spain) says:
+	  <blockquote>
+	    <p>I am currently finishing my PhD thesis in Political
+	      Science at the University of Barcelona and at the
+	      Institute of Law and Technology (UAB), and I've found
+	      your tm R package really useful for some of the
+	      operations I must carry out on text corpora. In
+	      particular, my thesis tackles decision-making processes
+	      within organizational environments and the tm package
+	      has proved really helpful when analyzing text regarding
+	      decision-making processes.</p>
+	  </blockquote>
+	</li>
+	<li>
 	  John Rigsby (<a href="http://www.navy.mil/">United
 	    States Navy</a>, USA) says:
 	  <blockquote>
