Update web page as requested.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@979 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/users.html
+++ b/www/users.html
@@ -179,7 +179,7 @@
 	  </blockquote>
 	</li>
 	<li>
-	  <a href="http://idt.uab.es/people/curr/vallbe.htm">Joan-Josep
+	  <a href="http://pepvallbe.blogspot.com/">Joan-Josep
 	  Vallb&eacute;</a> (<a href="http://www.ub.edu/">Universitat
 	  de Barcelona</a>, Spain) says:
 	  <blockquote>
