Add comment by Nick Torenvliet, restructure publications page
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1071 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/apps.html
+++ b/www/apps.html
@@ -1,5 +1,5 @@
 
-<!-- This document was automatically generated with bibtex2html 1.91
+<!-- This document was automatically generated with bibtex2html 1.95
      (see http://www.lri.fr/~filliatr/bibtex2html/),
      with the following command:
      /usr/bin/bibtex2html -d -r -nodoc -citefile apps -linebreak -nofooter -nf talk talk -nf tar tar.gz apps.bib  -->
@@ -8,101 +8,16 @@
 <table>
 
 <tr valign="top">
-<td align="right">
-[<a name="Karatzoglou_etal_2009">1</a>]
+<td align="right" class="bibtexnumber">
+[<a name="Karatzoglou_Feinerer_2010">1</a>]
 </td>
-<td>
-Alexandros Karatzoglou, Ingo Feinerer, and Kurt Hornik.
- Nonparametric distribution analysis for text mining.
- In <em>Advances in Data Analysis, Data Handling and Business
-  Intelligence (Proceedings of the 32nd Annual Conference of the Gesellschaft
-  f&uuml;r Klassifikation e.V., Helmut-Schmidt-Universit&auml;t / Universit&auml;t
-  der Bundeswehr Hamburg, July 16-18, 2008)</em>, Studies in Classification, Data
-  Analysis, and Knowledge Organization. Springer-Verlag, 2009.
- Accepted for publication.<br />
-[&nbsp;<a href="apps_bib.html#Karatzoglou_etal_2009">bib</a>&nbsp;| 
-<a href="http://www.logic.at/staff/feinerer/publications/talks/129_gfkl2008.pdf">talk</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right">
-[<a name="Feinerer_Hornik_2008">2</a>]
-</td>
-<td>
-Ingo Feinerer and Kurt Hornik.
- Text mining of supreme administrative court jurisdictions.
- In C.&nbsp;Preisach, H.&nbsp;Burkhardt, L.&nbsp;Schmidt-Thieme, and R.&nbsp;Decker,
-  editors, <em>Data Analysis, Machine Learning, and Applications (Proceedings
-  of the 31st Annual Conference of the Gesellschaft f&uuml;r Klassifikation
-  e.V., Albert-Ludwigs-Universit&auml;t Freiburg, March 7-9, 2007)</em>, Studies in
-  Classification, Data Analysis, and Knowledge Organization, pages 569-576.
-  Springer-Verlag, 2008.<br />
-[&nbsp;<a href="apps_bib.html#Feinerer_Hornik_2008">bib</a>&nbsp;| 
-<a href="http://dx.doi.org/10.1007/978-3-540-78246-9_67">DOI</a>&nbsp;| 
-<a href="http://www.logic.at/staff/feinerer/publications/talks/gfkl2007_lawmining.pdf">talk</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right">
-[<a name="Feinerer_Karatzoglou_2008">3</a>]
-</td>
-<td>
-Ingo Feinerer and Alexandros Karatzoglou.
- Fast text mining using kernels in R.
- In Paula Brito, editor, <em>COMPSTAT 2008-Proceedings in
-  Computational Statistics</em>, pages 813-821. Physica-Verlag, Heidelberg,
-  Germany, 2008.<br />
-[&nbsp;<a href="apps_bib.html#Feinerer_Karatzoglou_2008">bib</a>&nbsp;| 
-<a href="http://www.logic.at/staff/feinerer/publications/talks/compstat08-slides.pdf">talk</a>&nbsp;| 
-<a href="http://www.logic.at/staff/feinerer/publications/compstat_2008.pdf">.pdf</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right">
-[<a name="Feinerer_Wild_2007">4</a>]
-</td>
-<td>
-Ingo Feinerer and Fridolin Wild.
- Automated coding of qualitative interviews with latent semantic
-  analysis.
- In H.C. Mayr and D.&nbsp;Karagiannis, editors, <em>Proceedings of the 6th
-  International Conference on Information Systems Technology and its
-  Applications, May 23-25, 2007, Kharkiv, Ukraine</em>, volume 107 of <em>Lecture
-  Notes in Informatics</em>, pages 66-77, Bonn, Germany, 2007. Gesellschaft f&uuml;r
-  Informatik e.V.<br />
-[&nbsp;<a href="apps_bib.html#Feinerer_Wild_2007">bib</a>&nbsp;| 
-<a href="http://nm.wu-wien.ac.at/research/publications/b681.pdf">talk</a>&nbsp;| 
-<a href="http://nm.wu-wien.ac.at/research/publications/b679.ps">.ps</a>&nbsp;| 
-<a href="http://nm.wu-wien.ac.at/research/publications/b679.pdf">.pdf</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right">
-[<a name="Karatzoglou_Feinerer_2007">5</a>]
-</td>
-<td>
+<td class="bibtexitem">
 Alexandros Karatzoglou and Ingo Feinerer.
- Text clustering with string kernels in R.
- In R.&nbsp;Decker and H.-J. Lenz, editors, <em>Advances in Data Analysis
-  (Proceedings of the 30th Annual Conference of the Gesellschaft f&uuml;r
-  Klassifikation e.V., Freie Universit&auml;t Berlin, March 8-10, 2006)</em>,
-  Studies in Classification, Data Analysis, and Knowledge Organization, pages
-  91-98. Springer-Verlag, 2007.<br />
-[&nbsp;<a href="apps_bib.html#Karatzoglou_Feinerer_2007">bib</a>&nbsp;| 
-<a href="http://dx.doi.org/10.1007/978-3-540-70981-7_11">DOI</a>&nbsp;| 
-<a href="http://www.logic.at/staff/feinerer/publications/talks/237_GfKl_2006.pdf">talk</a>&nbsp;]
+ Kernel-based machine learning for fast text mining in R.
+ <em>Computational Statistics &amp; Data Analysis</em>, 54(2):290-297,
+  February 2010.<br />
+[&nbsp;<a href="apps_bib.html#Karatzoglou_Feinerer_2010">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1016/j.csda.2009.09.023">DOI</a>&nbsp;]
 
 </td>
 </tr>
