--- a/www/intro.html
+++ b/www/intro.html
@@ -1,5 +1,5 @@
 
-<!-- This document was automatically generated with bibtex2html 1.91
+<!-- This document was automatically generated with bibtex2html 1.95
      (see http://www.lri.fr/~filliatr/bibtex2html/),
      with the following command:
      /usr/bin/bibtex2html -d -r -nodoc -citefile intro -linebreak -nofooter intro.bib  -->
@@ -8,10 +8,10 @@
 <table>
 
 <tr valign="top">
-<td align="right">
+<td align="right" class="bibtexnumber">
 [<a name="Rnews:Feinerer:2008">1</a>]
 </td>
-<td>
+<td class="bibtexitem">
 Ingo Feinerer.
  An introduction to text mining in R.
  <em>R News</em>, 8(2):19-22, October 2008.<br />
