--- a/www/publications.html
+++ b/www/publications.html
@@ -10,8 +10,8 @@
       <h2>Publications</h2>
       <p>
 	Publications cover introductory articles, system descriptions,
-	and a broad range of papers where tm has been applied for
-	implementing experiments.
+	and papers where tm has been applied for implementing
+	experiments.
       </p>
       <h3>Introductory Articles</h3>
       <!--#include virtual="intro.html" -->
