--- a/www/users.html
+++ b/www/users.html
@@ -9,7 +9,7 @@
     <div id="maincol">
       <h2>Users</h2>
       <p>
-	Within the last year(s) tm has gained interest from a variety
+	Within the last years tm has gained interest from a variety
 	of researchers and users of different backgrounds. In an
 	attempt to inform new users about existing tm applications
 	this site aims to provide (an incomplete alphabetical) list of
@@ -265,6 +265,18 @@
 	  <blockquote>
 	    <p>I am attempting to utilize your package to analyze texts
 	      being used as product descriptions ...</p>
+	  </blockquote>
+	</li>
+	<li>
+	  Nick Torenvliet says:
+	  <blockquote>
+	    <p>Use Case: Business Media Text Mining to Determine
+	      Market Sentiment
+	      | <a href="http://www.sec.gov"><acronym>SEC</acronym></a> <a href="http://www.sec.gov/edgar.shtml"><acronym>EDGAR</acronym></a>
+	      database mining.</p>
+	    <p>Academic literature provides excellent tutorial and tm
+	      is extremely useful. Thanks! It is always exciting to
+	      hit useful software!</p>
 	  </blockquote>
 	</li>
 	<li>
