--- a/www/navigation.html
+++ b/www/navigation.html
@@ -14,8 +14,8 @@
     <li><a href="screenshots.html">Screenshots</a></li>
     <li>News
       <ul>
-	<li><a href="https://r-forge.r-project.org/plugins/scmsvn/viewcvs.php/pkg/ChangeLog?root=tm&amp;view=markup">Changelog</a></li>
-	<li><a href="https://r-forge.r-project.org/plugins/scmsvn/viewcvs.php/pkg/inst/NEWS?root=tm&amp;view=markup">NEWS</a></li>
+	<li><a href="https://r-forge.r-project.org/scm/viewvc.php/pkg/ChangeLog?view=markup&amp;root=tm">Changelog</a></li>
+	<li><a href="https://r-forge.r-project.org/scm/viewvc.php/pkg/inst/NEWS?view=markup&amp;root=tm">NEWS</a></li>
       </ul>
     </li>
     <li>Getting tm
