Add comment by Matteo Romanello
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1081 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/users.html
+++ b/www/users.html
@@ -261,6 +261,25 @@
 	  </blockquote>
 	</li>
 	<li>
+	  <a href="http://www.linkedin.com/in/matteoromanello">Matteo
+	  Romanello</a> (<a href="http://www.kcl.ac.uk/">King's
+	  College London</a>, United Kingdom) says:
+	  <blockquote>
+	    <p>I'm using your great package TM for R in the framework
+	    of my PhD project.</p>
+	    <p>I'm working on the topic of semantic information
+	    extraction from Classics (i.e. Greek and Latin) journal
+	    papers. At the moment, I'm also exploring the use of
+	    information retrievable
+	    from <a href="http://www.jstor.org/"><acronym>JSTOR</acronym></a>
+	    using the
+	    <a href="http://dfr.jstor.org/"><acronym>DFR</acronym></a>
+	    (Data for Research) API. I'm doing my PhD at King's
+	    College London (co-supervised by the CS department and the
+	    department of Digital Humanities).</p>
+	  </blockquote>
+	</li>
+	<li>
 	  Michael Conklin (<a href="http://www.markettools.com/">MarketTools</a>, USA) says:
 	  <blockquote>
 	    <p>I am attempting to utilize your package to analyze texts
