Add comment by Milan Bouchet-Valat
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1123 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/users.html
+++ b/www/users.html
@@ -287,6 +287,18 @@
 	  </blockquote>
 	</li>
 	<li>
+	  Milan Bouchet-Valat (<a href="http://www.ens-cachan.fr">&Eacute;cole normale sup&eacute;rieure de Cachan</a>, France) says:
+	  <blockquote>
+	    <p>I've really enjoyed working with tm because of its
+	      flexibility, which allowed me to adapt methods to my
+	      subject. I could process a corpus of about 7000
+	      newspaper articles using correspondence analysis and
+	      hierarchical clustering, and identified chronological
+	      trends. No other lexical analysis software would have
+	      made possible combining those different approaches.</p>
+	  </blockquote>
+	</li>
+	<li>
 	  Nick Torenvliet (<a href="http://code.google.com/p/quantkit/">QuantKit</a>) says:
 	  <blockquote>
 	    <p>Use Case: Business Media Text Mining to Determine
